<resources>
    <string name="app_name">TikiTaka Tickets </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_koko">KokoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="app_nme">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">TikiTaka </string>
    <string name="slide_1_desc">Welcome To TikiTaka Tickets.
        Start by Searching Events.</string>

    <string name="slide_2_title">All Events in One Place</string>
    <string name="slide_2_desc">Book  tickets for your family and friends!</string>

    <string name="slide_3_title">Easy Payment</string>
    <string name="slide_3_desc">Buy your tickets via lipa na Mpesa</string>

    <string name="slide_4_title">Enjoy Your Event </string>
    <string name="slide_4_desc">Enjoy and also dont forget to rate the Event provider</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>


    //Bottom Navigation String//

    <string name="item_1">Events</string>
    <string name="item_2">Local Events</string>
    <string name="item_3">Gallery</string>
    <string name="title_profile">Profile</string>


    <string name="information_demo_one">This fragment shows xml configuration of FabRevealMenu with horizontal orientation. Play with different layout attributes to customize the experience</string>
    <string name="information_demo_three">This fragment shows dynamic configuration of FabRevealMenu with dynamic menu item creation.</string>

    <string name="show_title">Show Title</string>
    <string name="show_double">Show More Items</string>
    <string name="show_overlay">Show Overlay</string>
    <string name="change_direction">Change Direction :</string>

    <string name="message">Description</string>
    <string name="messag">Event Name</string>
    <string name="send">Create</string>
    <string name="email">Date</string>
    <string name="name"> Time</string>
    <string name="mobno">Amount</string>
    <string name="reg_no">Admin Id</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


</resources>
