<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/eventtss"
        android:title="@string/item_1" />
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/eventtss"
        android:title="@string/item_2" />
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/hdcami"
        android:title="@string/item_3" />
</menu>